--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.451.0",
     "@clerk/nextjs": "^4.27.1",
+    "@prisma/client": "^5.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
+    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
